--- a/package.json
+++ b/package.json
@@ -63,6 +63,13 @@
     "workbox-webpack-plugin": "3.6.3"
   },
 
+  "proxy": {
+    "/api": {
+      "target": "/https://taskboard-39.herokuapp.com/api",
+      "ws": true
+    }
+  },
+
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
