--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.7.0",
     "react-app-polyfill": "^0.2.0",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-dev-utils": "^7.0.1",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
@@ -62,7 +63,6 @@
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "3.6.3"
   },
-
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
