--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jest-resolve": "23.6.0",
     "jquery": "^3.3.1",
     "jwt-decode": "^2.2.0",
+    "mdbreact": "^4.13.0",
     "mini-css-extract-plugin": "0.4.3",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
